# agent-ui-sdk

./: .gitignore  Makefile  README.md  SDK_README.md  package.json
agent/: Makefile  adk_weather.py  agent.py  langgraph_adk_weather.py  langgraph_weather.py  pyproject.toml  weather_agent.py  weather_shared.py
agent/libs/: __init__.py  adk_langgraph_agent.py
agent/sidd_agent_ui_sdk/: __init__.py  bundler.py  config.py  manager.py  server.py  tools.py
agent/ui/: index.tsx  package.json
src/app/: layout.tsx  page.tsx
src/app/api/copilotkit/: route.ts
src/sidd_agent_ui_sdk/: LoadExternalComponent.tsx  index.ts  preload.ts  types.ts  useUIStream.tsx
